Доален новый реквизит в документы

--- a/onec-mid-base-11/src/Documents/ЗаказПокупателя/Forms/ФормаДокумента/Form.form
+++ b/onec-mid-base-11/src/Documents/ЗаказПокупателя/Forms/ФормаДокумента/Form.form
@@ -1888,6 +1888,10 @@
       <event>OnReadAtServer</event>
       <name>ПриЧтенииНаСервере</name>
     </handlers>
+    <handlers>
+      <event>BeforeWrite</event>
+      <name>ПередЗаписью</name>
+    </handlers>
     <repostOnWrite>true</repostOnWrite>
   </extInfo>
 </form:Form>
